--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
   "author": "Jake Klassen",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build index.html --public-url='/'",
+    "repbuild": "rimraf dist",
+    "build": "parcel build index.html",
     "deploy": "yarn run build && surge dist/ --domain megavania.surge.sh",
     "start": "parcel index.html"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.119",
+    "@types/mainloop.js": "^1.0.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.11.0",
     "prettier": "^1.10.2",
-    "surge": "^0.19.0",
+    "rimraf": "^2.6.2",
+    "serve": "^10.1.1",
+    "surge": "^0.20.1",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
     "contro": "^2.1.2",
     "fixed-size-list": "^0.1.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "mainloop.js": "^1.0.4"
   }
 }
