--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.123",
+    "@types/lodash": "^4.14.137",
     "@types/mainloop.js": "^1.0.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.16.4",
-    "rimraf": "^2.6.3",
-    "serve": "^11.0.2",
+    "rimraf": "^3.0.0",
+    "serve": "^11.1.0",
     "surge": "^0.21.3",
-    "tslint": "^5.15.0",
-    "typescript": "^3.4.1",
-    "typescript-tslint-plugin": "^0.5.0"
+    "tslint": "^5.19.0",
+    "typescript": "^3.5.3",
+    "typescript-tslint-plugin": "^0.5.4"
   },
   "dependencies": {
+    "@jakeklassen/ecs": "^2.1.1",
     "contro": "^2.1.2",
     "fixed-size-list": "^0.1.5",
     "lerp": "^1.0.3",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mainloop.js": "^1.0.4"
   }
 }
